--- a/src/DashBoard/Components/AllUsers/AdminAllUsers.css
+++ b/src/DashBoard/Components/AllUsers/AdminAllUsers.css
@@ -1,7 +1,7 @@
 .admin_user_table {
   display: grid;
   grid-template-columns: 0.7fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
