--- a/src/DashBoard/Components/CreateProductCompoenet/Style/CreateProductcomp.css
+++ b/src/DashBoard/Components/CreateProductCompoenet/Style/CreateProductcomp.css
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: flex-start;
     border-radius: 3px;
-    align-items: end;
+    align-items: flex-end;
    margin-top: 20px;
 }
 .create_product_input_check label{
