--- a/src/Layout/Header/Styles/BottomHeader.css
+++ b/src/Layout/Header/Styles/BottomHeader.css
@@ -178,7 +178,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   padding: 20px 50px;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   border-radius: 10px;
   display: flex;
   flex-wrap: wrap;
